# ethics-council

./: CLAUDE.md  README.md  main.py  pyproject.toml
backend/: __init__.py  config.py  main.py  models.py  storage.py
config/: __init__.py  defaults.yaml  loader.py  schema.py
engine/: __init__.py  chairman.py  cli.py  context_discussion.py  domain_review.py  llm_client.py  pipeline.py  router.py  token_optimizer.py
examples/: example_project_ai.json  example_project_genomics.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: ExpertSelection.css  ExpertSelection.jsx  FinalReport.css  FinalReport.jsx  ProjectSubmission.css  ProjectSubmission.jsx  ReviewProgress.css  ReviewProgress.jsx
presets/ai-ethics/: cross_domain_templates.yaml  preset.yaml
presets/ai-ethics/experts/: algorithmic_fairness.yaml  data_privacy.yaml  legal_compliance.yaml  safety_alignment.yaml  social_impact.yaml  transparency.yaml
presets/clinical-trial/: cross_domain_templates.yaml  preset.yaml
presets/clinical-trial/experts/: biostatistics.yaml  informed_consent.yaml  protocol_design.yaml  regulatory_affairs.yaml  (+2 more)
presets/life-sciences/: cross_domain_templates.yaml  preset.yaml
presets/social-science/: cross_domain_templates.yaml  preset.yaml
prompts/: stage0_router.yaml  stage1_cross_check.yaml  stage1_domain_summary.yaml  stage1_review.yaml  stage2_context_discussion.yaml  stage3_chairman.yaml
schemas/: final_report.yaml  project_input.yaml  stage0_output.yaml  stage1_review_output.yaml  stage2_discussion_output.yaml
tests/: test_smoke.py
(+14 files in other folders)
